# vpn_cheker

./: .gitignore  README.md  VPN-Checker.spec  app.py  build.bat  create_icon.py  main.py  pyproject.toml  requirements.txt  services.json  theme.py
docs/superpowers/plans/: 2026-03-30-vpn-checker-v2.md  2026-03-30-vpn-checker.md
docs/superpowers/specs/: 2026-03-30-vpn-checker-design.md
engine/: checker.py  config.py  dns.py  history.py  http_check.py  ping.py  proxy.py  speedtest.py  verdict.py
tabs/: custom_check.py  full_check.py  history.py  settings.py
tests/: test_checker.py  test_config.py  test_history.py  test_http_check.py  test_ping.py  test_verdict.py
widgets/: service_card.py  smooth_scroll.py  speed_bar.py
