[project]
name = "vpn-checker"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt5==5.15.9",
    "ping3>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
